<resources>
    <string name="app_name">BlackJack</string>
    <string name="button_start">Start</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About</string>
    <string name="button_hit">Hit</string>
    <string name="button_pass">Pass</string>
    <string name="button_double">Double</string>
    <string name="button_split">Split</string>
    <string name="layout_player">Player</string>
    <string name="layout_dealer">dealer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
