<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startGame">

    <Button
        android:id="@+id/button8"
        android:layout_width="124dp"
        android:layout_height="67dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/button_hit"
        android:text="@string/button_hit"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="124dp"
        android:layout_height="67dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/button_split"
        android:text="@string/button_split"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="124dp"
        android:layout_height="67dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/button_double"
        android:text="@string/button_double"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:text="BlackJack"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="46dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="124dp"
        android:layout_height="67dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/button_pass"
        android:text="@string/button_pass"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>