<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.Game">

    <Button
        android:id="@+id/button_hit"
        android:layout_width="124dp"
        android:layout_height="67dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/button_hit"
        android:text="@string/button_hit"
        app:layout_constraintBottom_toTopOf="@+id/button_double"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_split"
        android:layout_width="124dp"
        android:layout_height="67dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/button_split"
        android:text="@string/button_split"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_double"
        android:layout_width="124dp"
        android:layout_height="67dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/button_double"
        android:text="@string/button_double"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_pass"
        android:layout_width="124dp"
        android:layout_height="67dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/button_pass"
        android:text="@string/button_pass"
        app:layout_constraintBottom_toTopOf="@+id/button_split"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layout_player"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_hit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_dealer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layout_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_dealer"
        android:layout_width="106dp"
        android:layout_height="44dp"
        android:text="Dealer"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:id="@+id/text_player"
        android:layout_width="96dp"
        android:layout_height="42dp"
        android:text="Player"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="290dp" />

</androidx.constraintlayout.widget.ConstraintLayout>