<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_rules"
        android:layout_width="218dp"
        android:layout_height="92dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="97dp"
        android:hint="@string/button_settings"
        android:onClick="rules"
        android:text="rules"
        app:layout_constraintBottom_toTopOf="@+id/button_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="218dp"
        android:layout_height="92dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="97dp"
        android:hint="@string/button_start"
        android:onClick="start"
        android:text="@string/button_start"
        app:layout_constraintBottom_toTopOf="@+id/button_rules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="218dp"
        android:layout_height="92dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="45dp"
        android:hint="@string/button_about"
        android:onClick="about"
        android:text="@string/button_about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_rules" />
</androidx.constraintlayout.widget.ConstraintLayout>