<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_split"
            android:layout_width="124dp"
            android:layout_height="67dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/button_split"
            android:text="@string/button_split"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_double"
            android:layout_width="124dp"
            android:layout_height="67dp"
            android:layout_marginStart="55dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/button_double"
            android:text="@string/button_double"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_pass"
            android:layout_width="124dp"
            android:layout_height="67dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/button_pass"
            android:text="@string/button_pass"
            app:layout_constraintBottom_toTopOf="@+id/button_split"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/layout_player"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/layout_splitter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_player" >

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_dealer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/text_player"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_dealer" />

        <TextView
            android:id="@+id/text_dealer"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="Dealer"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/layout_dealer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_player"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="Player"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/layout_player"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_dealer" />

        <LinearLayout
            android:id="@+id/layout_splitter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/button_hit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_bet"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:gravity="right"
                android:text="Bet:$10000"
                android:textColor="#FF5722"
                android:textSize="20sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_money"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="$10000"
                android:textColor="#4CAF50"
                android:textSize="20sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_hit"
                android:layout_width="124dp"
                android:layout_height="67dp"
                android:layout_marginStart="55dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/button_hit"
                android:text="@string/button_hit"
                app:layout_constraintBottom_toTopOf="@+id/button_double"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>